modify entities fiels